<resources>
    <string name="app_name">미세곰곰</string>
    <string name="no2_description">이산화질소는 적갈색의 반응성이 큰 기체로서, 대기 중에서 일산화질소의 산화에 의해서 발생하며, 대기 중에서 휘발성유기화합물과 반응하여 오존을 생성하는 전구물질(precursor)의 역할을 합니다. 질소산화물의 인체영향을 살펴보면, 일산화질소(NO) 보다는 이산화질소(NO2) 가 인체에 더욱 큰 피해를 주는 것으로 알려져 있습니다. 고농도에 노출되면 눈, 코 등의 점막에서 만성 기관지염, 폐렴, 폐출혈, 폐수종의 발병으로까지 발전할 수 있는 것으로 보고되고 있습니다.</string>
    <string name="co_description">일산화탄소는 무색, 무취의 유독성 가스로서 연료속의 탄소성분이 불완전 연소되었을 때 발생합니다. 일산화탄소의 인체 영향을 살펴보면, 혈액순환 중에서 산소운반 역할을 하는 헤모그로빈을 카르복실헤모글로빈(COHb)으로 변성시켜 산소의 운반기능을 저하시키며, 고농도의 일산화탄소는 유독성이 있어 건강한 사람에게도 치명적인 해를 입힙니다.</string>
    <string name="so2_description">황산화물의 일종으로 물에 잘 녹는 무색의 자극적인 냄새가 나는 불연성 가스입니다. 고농도의 아황산가스는 옥외 활동이 많고 천식에 걸린 어른과 어린이에게 일시적으로 호흡장애를 일으킬 수 있으며, 고농도에 폭로될 경우 호흡기계 질환을 일으키고 심장혈관 질환을 악화시키는 것으로 알려져 있습니다.</string>
    <string name="o3_description">오존은 대기 중에 배출된 NOx와 휘발성유기화합물(VOCs) 등이 자외선과 광화학 반응을 일으켜 생성된 PAN, 알데하이드 등의 광화학 옥시던트의 일종으로 2차 오염물질에 속합니다. 오존에 반복 노출시에는 폐에 피해를 줄 수 있는데, 가슴의 통증, 기침, 메스꺼움, 목 자극, 소화 등에 영향을 미치며, 기관지염, 심장질환, 폐기종 및 천식을 악화시키고, 폐활량을 감소 시킬 수 있습니다.</string>
    <string name="pm25_description">초미세먼지는 1000분의 2.5mm보다 작은 먼지입니다. 초미세먼지는 입자가 미세하여 코 점막을 통해 걸러지지 않고 흡입시 폐포까지 직접 침투할 수 있습니다.</string>
    <string name="pm10_description">미세먼지는 직경에 따라 미세먼지와 초미세먼지 등으로 구분하며, 미세먼지는 1000분의 10mm보다 작은 먼지입니다. 미세먼지는 공기 중 고체상태와 액체상태의 입자의 혼합물로 배출되며 화학반응 또는 자연적으로 생성됩니다.</string>
    <string name="cai_description">통합대기환경지수(CAI, Comprehensive air-quality index)는 대기오염도 측정치를 국민이 쉽게 알 수 있도록하고 대기 오염으로부터 피해를 예방하기 위한 행동 지침을 국민에게 제기하기 위하여 대기오염도에 따른 인체 영향 및 체감 오염도를 고려하여 개발된 표현 방식입니다. 6개의 대기오염물질별로 통합대기환경지수 점수를 산정하여여 가장 높은 점수를 통합 지수 값으로 사용하합니다.</string>
    <string name="app_description1">◎ 본 자료는 한국환경공단(에어코리아)에서 제공하는 실시간 관측 자료입니다.</string>
    <string name="app_description2">◎ 대기 농도 수치는 1시간 마다 측정되어 현 시간의 대기농도 수치와 다를 수 있습니다.</string>
    <string name="app_description3">◎ 관측소의 경우에는 현 주소에서 가장 가까운 관측소를 기준으로 측정하여 실제 대기농도 수치와 다소 차이가 있을 수 있습니다.</string>
    <string name="app_description4">◎ 관측소에서 정비 및 수리할 경우에는 정보를 불러오지 못하여 오류가 발생합니다.</string>
    <string name="app_description5">◎ 위젯을 사용할 경우에는 [설정] -> [위치] -> 해당 어플(미세곰곰)로 들어가서 "위치 권한"을 "항상 허용"으로 설정해 주어야합니다.</string>
    <string name="bear_table_text"><![CDATA[<곰돌이 이미지 별 단계>]]></string>
    <string name="finedust_table_text"><![CDATA[<대기 농도 수치 별 단계>]]></string>
    <string name="perfect_air">날이 좋으니 30분씩 3번 이상 환기하기!</string>
    <string name="good_air">날이 적당하니 30분씩 3번 환기합시다.</string>
    <string name="soso_air">환기 하면 안좋지만, 하고싶으면 잠깐만</string>
    <string name="bad_air">환기하면 안돼요!</string>
    <string name="waning"><![CDATA[<주의 사항>]]></string>
    <string name="loding_air">로 딩 중 ...</string>
    <string name="null_air">정보를 불러오지 못했습니다.</string>
    <string name="location_permission">위치 권한이 거절되어 사용할 수 없습니다.\n[설정]으로 이동하여 권한을 허용해주세요.</string>
    <string name="push_backbutton_one_more_time">종료하려면 뒤로가기를 한번 더 눌러주세요.</string>
    <string name="update_location">위치를 업데이트 했습니다.</string>
    <string name="fail_location">위치를 불러오지 못하였습니다.</string>
    <string name="fail_address">주소를 불러오지 못했습니다.</string>
    <string name="fail_get_finedust_data">미세먼지 정보를 불러오지 못하였습니다. 잠시후 다시 시도해주시기 바랍니다.</string>
</resources>