<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="어플 설명"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:layout_marginStart="30dp"
            android:textStyle="bold"
            android:layout_weight="1"/>

            <ImageView
                android:id="@+id/cancelImage"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_baseline_cancel_24"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="30dp"
            android:paddingBottom="5dp"
            android:textColor="@color/black"
            android:text="@string/bear_table_text"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/table_bear" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="5dp"
            android:text="@string/finedust_table_text"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="187dp"
            android:src="@drawable/table_finedust" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp"
            android:textColor="@color/black"
            android:paddingBottom="5dp"
            android:text="@string/waning"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/app_description1"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/app_description2"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/app_description3"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/app_description4"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>
</layout>